Grafana/grafana-healthcheck.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-healthz-route
  namespace: grafana
spec:
  parentRefs:
  - name: grafana-gateway
    namespace: grafana
  rules:
  - matches:
    - path:
        type: Exact
        value: /healthz
    filters:
    - type: ExtensionRef
      extensionRef:
        name: grafana-healthz
        group: gateway.kgateway.dev
        kind: DirectResponse
